tests/urmoac/input/wkt/errors/point_missing_id/sources.wkt
#id;pos;[var]
;POINT(-250 0)
